<resources>
    <string name="app_name">Comanda Digital</string>
    <string name="userName">Usuário</string>
    <string name="senha">Senha</string>
    <string name="facebookButton">Facebook</string>
    <string name="googleButton">Google+</string>
    <string name="loginButton">Login</string>
    <string name="cadastrarButton">Cadastrar</string>
    <string name="email">email@email.com</string>
    <string name="logoDescritption">Logotipo da aplicação</string>
    <string name="title_activity_mapa_estebelecimentos">Map</string>
    <string name="menos">-</string>
    <string name="mais">+</string>
    <string name="produto">Produto</string>
    <string name="descricao">Descrição</string>
    <string name="opcionais">Opcionais</string>
    <string name="continuarAdicionando">Continuar adicionando</string>
    <string name="pedido">Pedido</string>
    <string name="botao_adicionar_participante">Adicionar Participantes</string>
    <string name="botao_validar_mesa">Validar mesa</string>
    <string name="botao_recusar">Recusar</string>
    <string name="texto_dirija_se">Favor dirija-se a mesa mencionada e verifique a reserva</string>
    <string name="texto_validacao_gestor1">O colaborador</string>
    <string name="texto_validacao_gestor2">recusou uma solicitação</string>
    <string name="texto_validacao_gestor3">vinda da mesa</string>
    <string name="texto_validacao_mesa1">O cliente </string>
    <string name="texto_validacao_mesa2"> solicitou</string>
    <string name="texto_validacao_mesa3">a mesa</string>
    <string name="userEmail">Email</string>
    <string name="capacidade">Capacidade</string>
    <string name="selecionar_mesa">Confirmar Seleção</string>


</resources>
