<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.4"
        android:gravity="bottom"
        android:orientation="vertical">

        <EditText
            android:id="@+id/editTextUserName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/userName"
            android:inputType="textPersonName"
            android:textAlignment="center" />

        <EditText
            android:id="@+id/editTextPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/senha"
            android:inputType="textPassword"
            android:textAlignment="center" />

        <Button
            android:id="@+id/buttonLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="3dp"
            android:background="@drawable/normal_button_border"
            android:text="@string/loginButton" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.6"
        android:orientation="horizontal">

        <Button
            android:id="@+id/buttonFacebook"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="3dp"
            android:layout_weight="1"
            android:background="@drawable/facebook_button_border"
            android:text="@string/facebookButton"
            android:textColor="@android:color/holo_blue_dark"
            android:layout_marginEnd="3dp"
            tools:ignore="RtlSymmetry"
            style="@style/Widget.AppCompat.ButtonBar"/>

        <Button
            android:id="@+id/buttonGoolge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="3dp"
            android:layout_weight="1"
            android:background="@drawable/google_button_border"
            android:text="@string/googleButton"
            android:textColor="@android:color/holo_red_light"
            android:layout_marginStart="3dp"
            style="@style/Widget.AppCompat.ButtonBar"/>

    </LinearLayout>

</LinearLayout>