<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"

    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:weightSum="1"

    tools:context="comandadigital.com.br.comandadigital.controller.DetalheProduto">

    <LinearLayout
        android:layout_width="344dp"
        android:layout_height="219dp"
        android:orientation="horizontal"
        android:weightSum="1">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="344dp"
            android:layout_height="match_parent"
            android:layout_weight="0.24"
            app:srcCompat="@mipmap/ic_launcher" />
    </LinearLayout>

    <TextView
        android:id="@+id/textViewCodigoProduto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Código do produto" />

    <TextView
        android:id="@+id/textViewNomeProduto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Nome do produto" />

    <TextView
        android:id="@+id/textViewDescricao"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/descricao" />

    <TextView
        android:id="@+id/textViewPreco"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="R$ 29,90" />

    <TextView
        android:id="@+id/textViewOpcionais"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/opcionais" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="87dp"
        android:layout_weight="0.36"
        android:orientation="horizontal"
        android:weightSum="1">

        <LinearLayout
            android:layout_width="183dp"
            android:layout_height="140dp"
            android:orientation="vertical"
            android:weightSum="1">

            <ListView
                android:id="@+id/lista_opcionais"
                android:layout_width="match_parent"
                android:layout_height="102dp"
                android:layout_weight="0.71"
                android:layout="@layout/lista_item_opcional">

            </ListView><![CDATA[>

            ]]>
        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/button2"
        android:layout_width="match_parent"
        android:layout_height="21dp"
        android:layout_weight="0.25"
        android:clickable="true"
        android:text="@string/continuarAdicionando"
        android:textAllCaps="false" />

</LinearLayout>